working on contrast issues

--- a/main.css
+++ b/main.css
@@ -12,6 +12,7 @@ sage 95A595
 white D5D6D2
 brown 756867
 NAVY 564D80
+grey blue 88953B
 */
 
 
@@ -27,6 +28,17 @@ body {
   color: #353C3F;
   text-align: center;
   line-height: 1.5;
+}
+
+header {
+  margin-top: 10px;
+  background-color: #564D80;
+  color: #D5D6D2;
+}
+
+.required-header-text{
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 h1{
@@ -88,6 +100,7 @@ h2 {
 .bio_pt1, .bio_pt2, .bio_pt3 {
   margin-bottom: 20px;
   padding: 5px;
+  box-shadow: 1px 1px 1px 2px;
 }
 
 .skill-content {
@@ -155,7 +168,7 @@ h2 {
   margin: auto;
   height: 120px;
   width: 120px;
-  border: solid black;
+  border: solid #353C3F;
   margin-bottom: 10px;
   grid-row: 2;
   grid-column: 1;
@@ -193,7 +206,7 @@ h2 {
   padding-top: 10%;
   transform: rotate(15deg);
   padding-left: 10%;
-  color: #FF8D3F;
+  color: #756867;
 }
 
 li {
@@ -211,10 +224,11 @@ article {
   min-height: 200px;
   padding: 6% 6%;
   background-color: #95A595;
+  color: #292727
 }
 
 article:nth-child(even) {
-  background-color: rgb(239, 240, 235);
+  background-color: #D5D6D2;
 }
 
 .contact-link { 
@@ -238,7 +252,7 @@ footer {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  color: #FF8D3F;
+  color: #D5D6D2;
 
 }
 
@@ -279,7 +293,7 @@ footer {
     margin: 0;
     height: 120px;
     width: 120px;
-    border: solid black;
+    border: solid #353C3F;
     font-family: 'Oswald';
 
   }
@@ -353,7 +367,7 @@ footer {
     margin: 0;
     height: 200px;
     width: 200px;
-    border: solid black;
+    border: solid #353C3F;
     margin-bottom: 10px;
   }
 
